[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/GL-35.png" type="Texture" id=1]
[ext_resource path="res://assets/GL-32.png" type="Texture" id=3]
[ext_resource path="res://Task.gd" type="Script" id=4]
[ext_resource path="res://assets/Sofia Pro Bold Az.otf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 24
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 30.0
content_margin_right = 30.0
bg_color = Color( 0.0313726, 0.0666667, 0.168627, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 30.0
content_margin_right = 30.0
bg_color = Color( 0.898039, 0.0745098, 0.423529, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=3]
size = 18
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 30.0
content_margin_right = 30.0
bg_color = Color( 0.498039, 0.12549, 0.384314, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 30.0
content_margin_right = 30.0
bg_color = Color( 0.0627451, 0.133333, 0.34902, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=8]
size = 22
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=10]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 5 )

[node name="Task" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )

[node name="TaskPrompt" type="TextureRect" parent="CenterContainer"]
self_modulate = Color( 1, 1, 1, 0.929412 )
margin_left = 212.0
margin_top = 100.0
margin_right = 812.0
margin_bottom = 500.0
rect_min_size = Vector2( 600, 400 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/TaskPrompt"]
margin_right = 600.0
margin_bottom = 400.0
rect_min_size = Vector2( 600, 400 )
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 24
custom_constants/margin_bottom = 124
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/TaskPrompt/MarginContainer"]
margin_left = 24.0
margin_top = 32.0
margin_right = 568.0
margin_bottom = 276.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TaskQuestion" type="Label" parent="CenterContainer/TaskPrompt/MarginContainer/VBoxContainer"]
margin_right = 544.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 9 )
text = "Hey there! Could I get your office address?"
autowrap = true

[node name="Choices" type="VBoxContainer" parent="CenterContainer/TaskPrompt/MarginContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 544.0
margin_bottom = 218.0
rect_min_size = Vector2( 536, 178 )
size_flags_horizontal = 5
size_flags_vertical = 5
custom_constants/separation = 8

[node name="Button" type="Button" parent="CenterContainer/TaskPrompt/MarginContainer/VBoxContainer/Choices"]
margin_right = 544.0
margin_bottom = 54.0
rect_min_size = Vector2( 536, 54 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 4 )
clip_text = true

[node name="Label" type="Label" parent="CenterContainer/TaskPrompt/MarginContainer/VBoxContainer/Choices/Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -27.0
margin_right = 250.0
margin_bottom = 27.0
rect_min_size = Vector2( 500, 40 )
size_flags_horizontal = 4
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 3 )
text = "This is a test of some basic text in this field and I hope it wraps"
align = 1
valign = 1
autowrap = true

[node name="Button2" type="Button" parent="CenterContainer/TaskPrompt/MarginContainer/VBoxContainer/Choices"]
margin_top = 62.0
margin_right = 544.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 54 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 5 )
clip_text = true

[node name="Label" type="Label" parent="CenterContainer/TaskPrompt/MarginContainer/VBoxContainer/Choices/Button2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -27.0
margin_right = 250.0
margin_bottom = 27.0
rect_min_size = Vector2( 500, 40 )
size_flags_horizontal = 4
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 3 )
text = "This is a test of some basic text in this field and I hope it wraps and it appears that it does"
align = 1
valign = 1
autowrap = true

[node name="Button3" type="Button" parent="CenterContainer/TaskPrompt/MarginContainer/VBoxContainer/Choices"]
margin_top = 124.0
margin_right = 544.0
margin_bottom = 178.0
rect_min_size = Vector2( 0, 54 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 6 )
clip_text = true

[node name="Label" type="Label" parent="CenterContainer/TaskPrompt/MarginContainer/VBoxContainer/Choices/Button3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -27.0
margin_right = 250.0
margin_bottom = 27.0
rect_min_size = Vector2( 500, 40 )
size_flags_horizontal = 4
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 3 )
text = "This is a test of some basic text in this field and I hope it wraps"
align = 1
valign = 1
autowrap = true

[node name="Results" type="TextureRect" parent="CenterContainer"]
visible = false
margin_left = 212.0
margin_top = 100.0
margin_right = 812.0
margin_bottom = 500.0
rect_min_size = Vector2( 600, 400 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/Results"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Results/CenterContainer"]
margin_left = 34.0
margin_top = 154.0
margin_right = 566.0
margin_bottom = 246.0
custom_constants/margin_right = 16
custom_constants/margin_top = 0
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Results/CenterContainer/MarginContainer"]
margin_left = 16.0
margin_right = 516.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ResultsTitle" type="Label" parent="CenterContainer/Results/CenterContainer/MarginContainer/VBoxContainer"]
margin_right = 500.0
margin_bottom = 23.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "CORRECT!"
align = 1
valign = 1
autowrap = true

[node name="ResultsText" type="Label" parent="CenterContainer/Results/CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 500.0
margin_bottom = 76.0
rect_min_size = Vector2( 500, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Great job! That's correct.
TEST"
align = 1
valign = 1
autowrap = true

[node name="Choose" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -297.0
margin_top = -56.0
margin_right = 297.0
margin_bottom = -20.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "[wave]Choose the answer that makes you sound like a Ruby![/wave]"
text = "Choose the answer that makes you sound like a Ruby!"
scroll_active = false

[node name="EnterToContinue" type="RichTextLabel" parent="."]
visible = false
margin_left = 225.0
margin_top = 471.0
margin_right = 801.0
margin_bottom = 561.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = true
bbcode_text = "[wave][center]Click or Press Enter to Continue[/center][/wave]"
text = "Click or Press Enter to Continue"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CenterContainer/TaskPrompt/MarginContainer/VBoxContainer/Choices/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterContainer/TaskPrompt/MarginContainer/VBoxContainer/Choices/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="CenterContainer/TaskPrompt/MarginContainer/VBoxContainer/Choices/Button3" to="." method="_on_Button3_pressed"]
